# fuzzycat

./: .gitignore  .gitlab-ci.yml  COPYING.md  FILESTRUCTURE.md  FuzzyCat.py  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
doc/: api.rst  conf.py  howitworks.md  index.rst  phasetemporalclustering.md
doc/_static/: nihao_uhd_2.79e12_zoom_6_rerun_stars_ahf_movie.mov  nihao_uhd_8.26e11_zoom_2_new_run_stars_ahf_movie.mov  nihao_uhd_g1.12e12_3x9_stars_ahf_movie.mov  nihao_uhd_g6.96e11_3x9_stars_ahf_movie.mov  nihao_uhd_g7.08e11_5x10_stars_ahf_movie.mov  nihao_uhd_g7.55e11_3x9_stars_ahf_movie.mov
fuzzy_cat/: FuzzyCat.py  __init__.py
fuzzycat/: FuzzyData.py  FuzzyPlots.py  __init__.py  _version.py  fuzzycat.py  fuzzycat_utils.py  plotting_utils.py  randomSampleClustering_utils.py
notebooks/: demo.ipynb
tests/: test_fuzzycat.py
